#1344 fixed not hidden tooltips on mobile

--- a/src/main/scss/main.scss
+++ b/src/main/scss/main.scss
@@ -25,17 +25,6 @@ h3 {
     margin: 0;
 }
 
-/*
- * Let's target IE to respect aspect ratios and sizes for img tags containing SVG files
- *
- * [1] IE9
- * [2] IE10+
- */
-/* 1 */
-.ie9 img[src$=".svg"] {
-  width: 100%;
-}
-/* 2 */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   img[src$=".svg"] {
     width: 100%;
@@ -702,6 +691,11 @@ button:focus {
     outline: 0 !important;
     outline-offset: 0 !important;
     border: 1px solid $brand-warning !important;
+}
+
+.fdz-content {
+    z-index: 0;
+    background-color: rgb(250,250,250);
 }
 
 .fdz-content:focus {
